--- a/app/src/main/res/layout/fragment2.xml
+++ b/app/src/main/res/layout/fragment2.xml
@@ -30,6 +30,7 @@
     </LinearLayout>
 
     <ListView
+        android:id="@+id/list1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1" />
